Dry up blog title stuff

--- a/source/blog/2014-01-06-tdd-day-3.haml
+++ b/source/blog/2014-01-06-tdd-day-3.haml
@@ -1,7 +1,6 @@
-%h1
-  TDD Day 3
-%h3
-  What did I do today?
+---
+title: TDD Day 3
+---
 %p
   I started the next #{link_to 'kata', 'http://content.codersdojo.org/code-kata-catalogue/prime-factors/'} at Coders Dojo. I think you're supposed to do katas over and over again, but I didn't think I'd gain that much from repeating the FizzBuzz kata from yesterday. Maybe when I've got a better hang of things I can go back to FizzBuzz and learn something from it. Anyways, today's exercise was new to me - finding all the prime factors for a given number. Of course I've done this in math class, but I haven't written a program for it before.
 %p
