--- a/source/blog/index.haml
+++ b/source/blog/index.haml
@@ -9,9 +9,10 @@ per_page: 10
   - if prev_page
     %p= link_to 'Previous page', prev_page
 - page_articles.each_with_index do |article, i|
+  - next if article.data.draft
   %h2
     = link_to article.title, article
-    %span= article.date.strftime('%b %e, %Y')
+  %p= article.date.strftime('%b %e, %Y')
   = article.summary(500)
 - if paginate
   - if next_page
