Actually link to blog posts

--- a/source/layouts/shared/_header.haml
+++ b/source/layouts/shared/_header.haml
@@ -6,3 +6,5 @@
       =nav_link 'My job', '/resources/job/'
     %li
       =nav_link 'Resources', '/resources/'
+    %li
+      =nav_link 'Blog', '/blog/'
