--- a/source/blog/2014-02-13-git-branch-names-on-command-line.haml
+++ b/source/blog/2014-02-13-git-branch-names-on-command-line.haml
@@ -12,9 +12,9 @@ title: Git Branch Names on Command Prompt
      git branch 2> /dev/null | sed -e '/^[^*]/d' -e 's/* \(.*\)/ (\1)/'
   }
   export PS1="\W\[\033[32m\]\$(parse_git_branch)\[\033[00m\] $ "
+%p This code should go in your <code>~/.bash_profile</code>. Once you've added it, you'll need to source with <code>$ source ~/.bash_profile</code> (or <code>$ . ~/.bash_profile</code> if you want to save a few key strokes!).
 %p
-  This will change your prompt to be <code> current-directory (branch-name) $</code> with your branch name in green. Mine looks like this:
-%div.center
-  = image_tag 'blog/git-branch-prompt.png', alt: 'lucybain (blog) $'
-%p
+  Your prompt will be <code> current-directory (branch-name) $</code> with your branch name in green. Mine looks like this:
+  %div.center
+    = image_tag 'blog/git-branch-prompt.png', alt: 'lucybain (blog) $'
   Now you can see what branch your on right where you'll be committing it. Nice, huh? Hopefully you'll never run a <code>reset --hard</code> on the wrong branch again!
