--- a/source/stylesheets/header.sass
+++ b/source/stylesheets/header.sass
@@ -1,45 +1,66 @@
 @import variables
 
 .header
-  .nav
-    padding: 20px
-    margin: 0px
-    border-bottom: 1px solid #ccc
-    li
-      font-size: 0.75em
-      margin: 0px
-      a
-        padding: 24px 20px 21px
-        &:hover
-          text-decoration: none
-          background-color: $light-accent
-          border-bottom: 2px solid $light-accent
-      .active
-        border-bottom: 2px solid $accent
-        &:hover
-          border-bottom: 2px solid $accent
-
-  .slicknav_menu
-    display: none
-    font-size: 0.75em
-    text-align: center
-    font-weight: bold
-    padding: 20px 20px 20px 0px
-    width: 100%
-    background-color: $accent
-    a
-      color: #fff
-    li
+  #menu
+    .nav-open
+      display: none
+      ul
+        border: none
+        top: 0
+        right: 0
+        position: absolute
+        margin-top: 22px
+        margin-right: 20px
+      li
+        height: 2px
+        padding: 0px
+        margin-bottom: 4px
+        width: 20px
+        background-color: #fff
+    .nav
       padding: 20px
-      &:last-child
-        padding-bottom: 0px
-      a
-        &:hover
-          text-decoration: none
+      margin: 0px
+      border-bottom: 1px solid #ccc
+      li
+        font-size: 0.75em
+        margin: 0px
+        a
+          padding: 24px 20px 21px
+          &:hover
+            text-decoration: none
+            background-color: $light-accent
+            border-bottom: 2px solid $light-accent
+        .active
+          border-bottom: 2px solid $accent
+          &:hover
+            border-bottom: 2px solid $accent
 
   @include respond(small)
     #menu
-      display: none
-
-    .slicknav_menu
-      display: block
+      .nav-open
+        display: block
+      .nav
+        height: 0
+        overflow: hidden
+        padding: 0px
+        transition: height 500ms
+        border: none
+      text-align: center
+      font-weight: bold
+      padding: 30px
+      width: 100%
+      background-color: $accent
+      a
+        color: #fff
+      ul
+        border: none
+      li
+        padding: 20px
+        display: block
+        a
+          &:hover
+            text-decoration: none
+            background-color: inherit
+            border: none
+    #menu .nav.open
+      height: 210px
