--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -10,9 +10,11 @@
   .profile-pic
     width: 300px
 
-  .connections li
-    display: inline
-    margin-right: 15px
+  .connections
+    padding: 0px
+    li
+      display: inline
+      margin-right: 15px
 
 
 @include respond(medium)
