make udacity python study group public

--- a/source/resources/udacity-python-study-group.haml
+++ b/source/resources/udacity-python-study-group.haml
@@ -19,12 +19,13 @@ summary: "I'd like to start a study group for the Udacity Programming 101 course
 
 %ul
   %li I will organise a study group once a week for the Udacity Programming 101
-  %li Start date is Monday, March 10 at 6:30
+  %li Start date is Monday, March 10 at 6:30.
   %li We will meet at my office - #{link_to '17-19 Pitt St, Sydney', 'https://maps.google.com.au/maps?q=17-19+bridge+street+sydney&hl=en&ll=-33.863895,151.20846&spn=0.01151,0.022295&sll=-33.861913,151.20918&sspn=0.01151,0.022295&gl=au&hnear=17-19+Bridge+St,+Sydney+New+South+Wales+2000&t=m&z=16'}
   %li You are responsible for watching that week's lesson video
   %li We will start that week's homework at the study group and discuss any problems and questions that come up
   %li If you weren't able to finish it at the meeting you are responsible for finishing that week's homework on your own
   %li We will go through the base course (7 weeks), and then decide if we want to continue and do weeks 8-11
+  %li We won't meet on April 21 (Easter Monday). Our last meeting will be on April 28, unless we decide to do weeks 8-11.
 
 %h3 Cost
 %p
