--- a/source/resources/programming-community-in-sydney.haml
+++ b/source/resources/programming-community-in-sydney.haml
@@ -13,8 +13,11 @@ summary: "Who to follow and where to look for community events."
     Rails Camp Australia -
     =link_to '@railscamp_au', 'https://twitter.com/railscamp_au'
   %li
-    RailsGirls Australia -
+    Rails Girls Australia -
     = link_to '@railsgirlsau', 'https://twitter.com/railsgirlsau'
+  %li
+    Rails Girls Sydney -
+    = link_to '@railsgirlssyd', 'https://twitter.com/railsgirlssyd'
 %h2 Everything else
 %ul
   %li
