oops, twitter is still in progress!

--- a/source/blog/2014-02-25-getting-start-on-twitter.haml
+++ b/source/blog/2014-02-25-getting-start-on-twitter.haml
@@ -1,5 +1,6 @@
 ---
 title: Getting Started on Twitter
+draft: true
 ---
 %p
   A friend of mine recently got set up with Twitter and asked for some pointers. Another friend complemented me on my feed. I was flattered, and wanted to make how I use Twitter public.
