publish getting started with twitter

--- a/source/blog/2014-02-25-getting-start-on-twitter.haml
+++ b/source/blog/2014-02-25-getting-start-on-twitter.haml
@@ -1,6 +1,5 @@
 ---
 title: Getting Started on Twitter
-published: false
 ---
 %p
   A friend of mine recently got set up with Twitter and asked for some pointers. Another friend complemented me on my feed. I was flattered, and wanted to make how I use Twitter public.
@@ -12,26 +11,32 @@ published: false
   There are a few starting points you should know about Twitter. Once you've had an account for a while it's fairly straight forward, but if you're just starting out here are some tips:
   %ul
     %li
-      If you tweet at someone (e.g. "@lucykbain how's your day going?") only people who follow both you and the person you're tweeting at can see the tweet. If you'd like to tweet at someone but want everyon to see you need to start with another character, general a period (e.g. ".@lucykbain thanks for the link - I'm sharing it with everyone!")
+      If you tweet at someone (e.g. "@lucykbain how's your day going?") only people who follow both you and the person you're tweeting at can see the tweet. If you'd like to tweet at someone but want everyone to see you need to start with another character, general a period (e.g. ".@lucykbain thanks for the link - I'm sharing it with everyone!")
     %li
-      If you retweet someone diretly your handle (username) is visible, but not as prominate as the person you retweeted. You can get around this by quoting their tweet, but unless you're adding something it's kind of bad manners.
+      If you retweet someone diretly your handle (username) is visible, but not as prominent as the person you retweeted. You can get around this by quoting their tweet, but unless you're adding something it's kind of bad manners.
     %li
       Favouriting tweets lets the person know you saw the tweet, or that you appreciated it. It will be saved in your "favourited" section, but it doesn't go out to your followers. The person who wrote the original tweet would almost certainly appreciate a retweet over a favourite, but that's up to you.
     %li
       You can send a direct message (DM) to someone you follow who follows you back (two way follow). A DM is kind of like an email (private between the two of you), but has the same character limit. Also, I've found it can be hard to share links in a DM, sometimes it works, sometimes it doesn't.
 %h2 Moving up in the world
 %p
+  If you're happy with your twitter experience, that's great! Just keep doing what you're doing. I'm not telling you that you should change. But, if you'd like more followers, exposure, or focus, the rest of this post might help.
+%p
   Ok, now you've gotten the hang of Twitter, you hopefully have a few followers (hey, your mom totally counts!), and you're following a few people yourself (the more the merrier!). What's next?
 %p
-  For me it's now about optimising your tweets and your time. Sure some people tweet seemingly constantly - more power to them. Personally I tend to unfollow people who tweet too much, and I don't really want to spend my day sifting through tweets to find good ones to retweet, or putting out my every thought.
+  For me it's now about optimising your tweets and your time. Sure some people tweet seemingly constantly - more power to them. Personally I tend to unfollow people who tweet too much; I don't really want to spend my day sifting through tweets to find good ones to retweet, or reading through someone's blow by blow account of their breakfast. Other people tweet whenever, sometimes going weeks at a time without writing anything. I usually forget I'm following these people, but their tweets don't bother me.
 %p
-  So let's say you decide to limit yourself to two tweets a day. It's a good starting point - it's basically where I started. I wanted to tweet often enough that people would remember me, but not so much that I'd be <em>that girl</em>. How do you know when to tweet?
+  So let's say you decide to set a goal for two "good" tweets a day. "Good" is however you define it - links to your own content, witty comments, helpful tips, links to things you found interesting/useful, whatever you think the internet needs more of. Two tweets a day is a good starting point - enough that you feel a bit of pressure to make good tweets, but few so you have to trash the bad ones. Now, how do you know when to tweet?
 %p
-  You go checkout #{link_to 'WEBSITE', '#'} and find out when most of your followers are active. But don't stop there, scroll down a little more and find when most of your followers do retweets. Retweets are pretty much the goal. Whatever your saying, you want it to get to as many people as possible. If they end up following you, that's great, but even if they don't, they saw what you were saying, and that's the important bit. If you're only tweeting once or twice a day you want to make sure what you tweet has the maximum impact.
+  You go checkout #{link_to 'followerwonk', 'https://followerwonk.com/'} and find out when most of your followers are active. (There are other services that do the same kind of thing, I've only ever used followerwonk, so I don't know about the others, just that they exist.) But don't stop there, scroll down a little more and find when most of your followers retweet. Retweets are pretty much the goal. Whatever your saying, you want it to get to as many people as possible. If they end up following you, that's great, but even if they don't, they saw what you were saying, and that's the important bit. If you're only tweeting once or twice a day you want to make sure what you tweet has the maximum impact.
 %p
-  If you're tweeting to increase your personal visibility (and most people are) then the time period with the maximum retweets should be used for your personal content. Don't use your one major retweet window per day to sell someone else (unless you're ok with that, which is fine), use it to make yourself more visible to more people. Plus your content is what makes following you worth something.
+  Rank the times you tweet based on their potential. Generally that will be the number of retweets your followers make during a given time period. Whatever is in your "best" time make sure that's your best content. This isn't rocket science, it isn't particularly interesting or hard. It's just that you should think about it. Sure, you can tweet whenever, but if you know when the "best" time for you is, tweet then.
 %p
-  That said, "your content" is really fluid. Do you want to be a
+  Finally, it's pretty annoying to remember when to tweet. You might think of something great to say, but at the "wrong" time. There are a few services out there. I use #{link_to 'Buffer', 'http://bufferapp.com/r/63cdc6'}, but there are similar services out there. They'll keep track of when to tweet for you so you don't need to. It also means you can put a whole bunch of great tweets together at the same time, but they'll get spaced out so you don't spam your followers.
+%p
+  Of course there are going to be times when you just <em>have</em> to tweet. That's fine, it's even encouraged if you're at an event or tweeting about anything time based. Just be aware that if you're tweeting more than usual about something specific, other people are too. The whole stream is diluted, and your great content is more likely to get missed. So maybe pause your Buffer, or put in some of your not-so-great tweets...
+%p
+  And that's it! As I said, not particularly scientific, and certainly nothing about massive SEO stuff or anything like that. This is just how I deal with sending out tweets, and keeping track of when I say what. Your time is valuable, and so is the time of your followers. Try not to waste it.
 
 
 
