--- a/source/blog/2014-02-27-Sublime-Auto-Indent.haml
+++ b/source/blog/2014-02-27-Sublime-Auto-Indent.haml
@@ -2,7 +2,7 @@
 title: Sublime Auto Indent
 ---
 %p
-  I recently discoverd how to get Sublime to fix indentations for you! Since I spend a certain amount of time each day pushing characters left and right this was pretty exciting. Hope you find it useful!
+  I recently discovered how to get Sublime to fix indentations for you! Since I spend a certain amount of time each day pushing characters left and right this was pretty exciting. Hope you find it useful!
 
 %p
   In Sublime, under <code>Preference</code> select <code>Key Bindings - User</code>. If you've got anything in there already, just add the <code>{ "keys"... }</code> section below. Otherwise you can replace the <code>[]</code> with:
@@ -25,4 +25,4 @@ title: Sublime Auto Indent
   %li
     <code>"command"</code> labels which command the given key binding should trigger.
   %li
-    <code>"reindent"</code> is the command that will run on the given key press. A list of commands you could use can be found #{link_to 'in the docs', 'http://www.sublimetext.com/docs/commands'}.
+    <code>"reindent"</code> is the command that will run on the given key press. You can find a list of commands to use #{link_to 'in the docs', 'http://www.sublimetext.com/docs/commands'}.
