--- a/source/blog/2014-03-06-git-push-current.haml
+++ b/source/blog/2014-03-06-git-push-current.haml
@@ -3,7 +3,8 @@ title: Git only push current branch
 published: false
 ---
 
-[push]
-  default = current
+:code
+  [push]
+    default = current
 
 Via Jude
