--- a/source/blog/2014-03-07-annotate-after-migrate.haml
+++ b/source/blog/2014-03-07-annotate-after-migrate.haml
@@ -3,14 +3,15 @@ title: Git only push current branch
 published: false
 ---
 
-Rake::Task["db:migrate"].enhance do
-  Rake::Task["splitit:db:annotate"].invoke
-end
+:code
+  Rake::Task["db:migrate"].enhance do
+    Rake::Task["splitit:db:annotate"].invoke
+  end
 
-namespace :splitit do
-  namespace :db do
-    task :annotate => :environment do |t, args|
-      `annotate --exclude tests,fixtures,factories`
+  namespace :splitit do
+    namespace :db do
+      task :annotate => :environment do |t, args|
+        `annotate --exclude tests,fixtures,factories`
+      end
     end
   end
-end
