--- a/source/layouts/shared/_header.haml
+++ b/source/layouts/shared/_header.haml
@@ -9,7 +9,7 @@
       %li
         =nav_link 'Connect with me', '/'
       %li
-        =nav_link 'My job', '/resources/job/'
+        =nav_link 'My job', '/job/'
       %li
         =nav_link 'Resources', '/resources/'
       %li
