--- a/source/resources/index.haml
+++ b/source/resources/index.haml
@@ -1,5 +1,7 @@
 %h2=link_to 'JS and jQuery Study group', 'http://codesydney.com/'
 %p Link to my study group for the Odin Project's JS course
+%h2=link_to 'JS and jQuery code', '/code-sydney-work'
+%p Directions, demos, and code solutions for the JS study group homework
 - ['programming-community-in-sydney', 'git-info', 'setting-up-sublime-autosave'].each do |page_title|
   - current_page.children.each do |p|
     - next unless path_to_file_name(p.path) == page_title
