Change from Facebook to LinkedIn

--- a/source/index.haml
+++ b/source/index.haml
@@ -15,4 +15,4 @@
     %li
       =link_to 'Stackoverflow', 'http://stackoverflow.com/users/863846/lucy-bain'
     %li
-      =link_to 'Facebook', 'https://www.facebook.com/LucyKBain'
+      =link_to 'LinkedIn', 'http://www.linkedin.com/profile/view?id=244724359&trk=spm_pic'
