remove unused code

--- a/source/layouts/shared/_header.haml
+++ b/source/layouts/shared/_header.haml
@@ -14,3 +14,8 @@
         =nav_link 'Resources', '/resources/'
       %li
         =nav_link 'Blog', '/blog/'
+
+:javascript
+  $('#menu .nav-open').on('click', function(){
+    $('#menu .nav').toggleClass('open');
+  })
