--- a/source/layouts/blog.haml
+++ b/source/layouts/blog.haml
@@ -1,6 +1,7 @@
 - wrap_layout :layout do
   %h1= current_page.data.title
-  = yield
+  = find_and_preserve do
+    = yield
 
   - if not current_page.data.no_comments
     #disqus_thread
