Add tags and fix layouts

--- a/source/blog/2014-09-25-event-delegation.haml
+++ b/source/blog/2014-09-25-event-delegation.haml
@@ -1,5 +1,6 @@
 ---
 title: "JS event delegation"
+tags: js, interview-questions
 ---
 %p
   I'm continuing my JS learning and found a list of #{link_to 'front end interview questions', 'https://github.com/darcyclarke/Front-end-Developer-Interview-Questions'}. There's a section devoted to JS on there for me to work through. If they're important enough to know in an interview I should probably know about them too.
