--- a/source/stylesheets/content.sass
+++ b/source/stylesheets/content.sass
@@ -43,9 +43,11 @@
 
   ul
     padding-left: 40px
+    li
+      list-style-type: disc
+
   li
     line-height: 1.75em
-    list-style-type: disc
 
   .center
     text-align: center
