--- a/source/stylesheets/application.css.sass
+++ b/source/stylesheets/application.css.sass
@@ -19,6 +19,39 @@ a
 b, strong, bold
   font-weight: $bold
 
+p
+  margin-bottom: 20px
+  line-height: 1.5em
+
+h1, h2, h3, h4
+  font-family: $title-font
+  font-weight: $normal-weight
+  line-height: 1.25em
+  margin: 40px 0px 20px
+
+h1
+  font-size: 2.5em
+  @include respond(small)
+    font-size: 2em
+
+h2
+  font-size: 1.5em
+
+h3
+  font-size: 1em
+  margin: 20px 0px 0px
+
+h1, h2, h3
+  @include respond(small)
+    margin: 20px 0px 0px
+
+ul
+  padding-left: 40px
+  li
+    list-style-type: disc
+
+li
+  line-height: 1.75em
 
 #main
   margin: 0 auto
@@ -33,6 +66,7 @@ b, strong, bold
 @import posts
 @import home
 @import content
+@import resume
 @import blog
 @import form
 @import code
