--- a/source/resume.haml
+++ b/source/resume.haml
@@ -16,8 +16,8 @@
     %h2.item-company-title Split It Inc.
     %span.item-personal-title Web Developer
     %span.item-date May 2013 - current
-    .item-company-details
-      Build and maintain platforms selling household utilities and financial services.
+    %p.item-company-details
+      Build and maintain platforms selling household utilities and financial services
     %ul.item-personal-details
       %li Focused on writing readable, reusable code
       %li Pair programmed to discover, implement, and communicate code standards among the team
@@ -31,8 +31,8 @@
       .target-dot
     %h2.item-company-title AVOS Systems, Inc
     %span.item-personal-title Backend Web Developer
-    %span.item-date November 2011 -<br/> May 2013
-    .item-company-details
+    %span.item-date Nov 2011 - May 2013
+    %p.item-company-details
       Explore new ways to interact with media
     %ul.item-personal-details
       %li Developed new features for multiple web apps in Ruby on Rails and Python
@@ -44,8 +44,8 @@
       .target-dot
     %h2.item-company-title Synactive
     %span.item-personal-title Software Engineer Intern
-    %span.item-date July - October 2011
-    .item-company-details
+    %span.item-date July - Oct 2011
+    %p.item-company-details
       Create products to enhance SAP users’ experience
     %ul.item-personal-details
       %li Built new features for our next release and saw them through QA
@@ -55,10 +55,10 @@
     .target-border
       .target-dot
     %h2.item-company-title Zepheira
-    %span.item-personal-title Intern - Web Developer
+    %span.item-personal-title Web Developer Intern
     %span.item-date May - July 2010
-    .item-company-details
-      Analyze linked data from the Semantic Web.
+    %p.item-company-details
+      Analyze linked data from the Semantic Web
     %ul.item-personal-details
       %li Consulted with CEO to analyze and choose improved web framework for solution set
       %li Transferred and formatted web content from previous site to WordPress
@@ -69,7 +69,7 @@
     %h2.item-company-title UMW Summer Science Institute
     %span.item-personal-title Research Assistant
     %span.item-date May - July 2009
-    .item-company-details FILL ME IN
+    %p.item-company-details Undergraduate research program
     %ul.item-personal-details
       %li Served as professor’s researcher on data visualization initiative
       %li Analyzed data, created 3D graphics, led technical presentation for students and faculty
@@ -91,21 +91,10 @@
   .item
     .target-border
       .target-dot
-    %h2.item-company-title Study groups
-    %span.item-personal-title Organiser
-    %span.item-date February - June 2014 <br/> August - October 2014
-    %ul.item-personal-details
-      %li Lead an introduction to programming course in Python (lucybain.com/python)
-      %li Facilitated a group to practice JavaScript that attracted 40 registrations (codesydney.com)
-      %li Arranged for mentors from the community to answer questions
-      %li Implemented an incentive based payment system to encourage members to attend
-
-  .item
-    .target-border
-      .target-dot
     %h2.item-company-title Rails Girls
     %span.item-personal-title Organiser, Mentor
-    %span.item-date July 2013<br/> November 2013<br/> February 2014<br/> July 2014
+    %span.item-date July 2013 - current
+    %p.item-company-details Introducing women to programming and Ruby on Rails
     %ul.item-personal-details
       %li Started Rails Girls Next, and organised its first workshop (lbain.github.io/rails-girls-next)
       %li Wrote an explanation of the Rails Girls guide for other mentors and anyone unable to go to a Rails Girls event (github.com/lbain/railsgirls)
@@ -115,11 +104,23 @@
   .item
     .target-border
       .target-dot
-    %h2.item-company-title She Hacks
-    %span.item-personal-title All women hackathon
-    %span.item-date March 2014
+    %h2.item-company-title Study groups
+    %span.item-personal-title Organiser, Mentor
+    %span.item-date February - June 2014 <br/> August - Oct 2014
     %ul.item-personal-details
-      %li Web Developer
+      %li Lead an introduction to programming course in Python (#{link_to 'lucybain.com/python', 'lucybain.com/python'})
+      %li Facilitated a group to practice JavaScript that attracted 40 registrations (#{link_to 'codesydney.com', 'codesydney.com'})
+      %li Arranged for mentors from the community to answer questions
+      %li Implemented an incentive based payment system to encourage members to attend
+
+  .item
+    .target-border
+      .target-dot
+    %h2.item-company-title She Hacks
+    %span.item-personal-title Developer
+    %span.item-date March 2014
+    %p.item-company-details All women hackathon
+    %ul.item-personal-details
       %li Lead the technical members in creating a Rails site in 2 days
       %li Worked with designers and a front end developer to build the user experience
 
@@ -139,25 +140,10 @@
   .item
     .target-border
       .target-dot
-    %h2.item-company-title UMW Computer Science Department
-    %span.item-personal-title Honors Research Team Member
-    %span.item-date August 2010 -<br/> May 2011
+    %h2.item-company-title University of Mary Washington
+    %span.item-personal-title BSc Comp Sci, Honors
+    %span.item-date Aug 2007 - May 2011
+    %p For my honors project:
     %ul.item-personal-details
       %li Researched and improved knowledge search for scholarly articles with a team
       %li Authored and presented final thesis for departmental honors
-
-  .item
-    .target-border
-      .target-dot
-    %h2.item-company-title University of Mary Washington
-    %span.item-personal-title BSc Computer Science, Honors
-    %span.item-date August 2007 -<br/> May 2011
-
-%section.category.technical
-  .category-title TECHNICAL COMPETENCY
-  .item
-    .target-border
-      .target-dot
-    %p Ruby on Rails, JavaScript, Python, MongoDB (using the Mongoid gem)
-    %p HTML, CSS, SASS
-    %p Sublime Text 2, Microsoft Visual C++, Xcode, mySQL, Git & GitHub
