--- a/source/stylesheets/application.css.sass
+++ b/source/stylesheets/application.css.sass
@@ -21,7 +21,7 @@ b, strong, bold
 
 p
   margin-bottom: 20px
-  line-height: 1.5em
+  line-height: 1.6em
 
 h1, h2, h3, h4
   font-family: $title-font
@@ -49,6 +49,8 @@ ul
   padding-left: 40px
   li
     list-style-type: disc
+    line-height: 1.5em
+    margin-bottom: 0.5em
 
 li
   line-height: 1.75em
