--- a/source/stylesheets/variables.sass
+++ b/source/stylesheets/variables.sass
@@ -12,8 +12,8 @@ $very-light-accent: #f9ebef
 $bold: 700
 $normal-weight: 400
 
-$title-font: 'Nobile', sans-serif
-$content-font: 'Crimson Text', sans-serif
+$title-font: 'Source Sans Pro', sans-serif
+$content-font: 'Source Sans Pro', sans-serif
 
 
 @function generate_media_query($pixels)
