--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -6,7 +6,7 @@
     %meta{content: "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}
     %link{href: "/images/favicon.ico", rel: "icon", type: "image/ico"}
 
-    %link{href: "http://fonts.googleapis.com/css?family=Crimson+Text:400,700|Nobile:400,700", rel: "stylesheet", type: "text/css"}
+    %link{href: "http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700", rel: "stylesheet", type: "text/css"}
     %title= current_page.data.title || "Lucy Bain"
     = stylesheet_link_tag "application"
     %script{src: "//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"}
