--- a/source/stylesheets/variables.sass
+++ b/source/stylesheets/variables.sass
@@ -8,6 +8,7 @@ $dark-gray: #333
 $accent: #C93C67
 $light-accent: lighten($accent, 40)
 $very-light-accent: #f9ebef
+$dark-accent: darken($accent, 5)
 
 $bold: 700
 $normal-weight: 400
