--- a/source/layouts/shared/_header.haml
+++ b/source/layouts/shared/_header.haml
@@ -1,21 +1,20 @@
-.header
-  #menu
-    .nav-open
-      %ul
-        %li
-        %li
-        %li
-    %ul.nav
+#menu
+  .nav-open-btn
+    %ul
       %li
-        =nav_link 'Connect with me', '/'
       %li
-        =nav_link 'My job', '/job/'
       %li
-        =nav_link 'Resources', '/resources/'
-      %li
-        =nav_link 'Blog', '/blog/'
+  %ul.nav
+    %li
+      =nav_link 'Connect with me', '/'
+    %li
+      =nav_link 'My job', '/job/'
+    %li
+      =nav_link 'Resources', '/resources/'
+    %li
+      =nav_link 'Blog', '/blog/'
 
 :javascript
-  $('#menu .nav-open').on('click', function(){
+  $('#menu .nav-open-btn').on('click', function(){
     $('#menu .nav').toggleClass('open');
   })
