Make resume responsive

--- a/source/resume.haml
+++ b/source/resume.haml
@@ -96,8 +96,8 @@
     %span.item-date July 2013 - current
     %p.item-company-details Introducing women to programming and Ruby on Rails
     %ul.item-personal-details
-      %li Started Rails Girls Next, and organised its first workshop (lbain.github.io/rails-girls-next)
-      %li Wrote an explanation of the Rails Girls guide for other mentors and anyone unable to go to a Rails Girls event (github.com/lbain/railsgirls)
+      %li Started Rails Girls Next, and organised its first workshop (#{link_to 'lbain.github.io/rails-girls-next', 'http://lbain.github.io/rails-girls-next'})
+      %li Wrote an explanation of the Rails Girls guide for other mentors and anyone unable to go to a Rails Girls event (#{link_to 'github.com/lbain/railsgirls', 'http://github.com/lbain/railsgirls'})
       %li Answered questions about the Rails stack
       %li Debugged code when the participants ran into difficulties
 
@@ -108,8 +108,8 @@
     %span.item-personal-title Organiser, Mentor
     %span.item-date February - June 2014 <br/> August - Oct 2014
     %ul.item-personal-details
-      %li Lead an introduction to programming course in Python (#{link_to 'lucybain.com/python', 'lucybain.com/python'})
-      %li Facilitated a group to practice JavaScript that attracted 40 registrations (#{link_to 'codesydney.com', 'codesydney.com'})
+      %li Lead an introduction to programming course in Python (#{link_to 'lucybain.com/python', '/python'})
+      %li Facilitated a group to practice JavaScript that attracted 40 registrations (#{link_to 'codesydney.com', 'http://www.codesydney.com'})
       %li Arranged for mentors from the community to answer questions
       %li Implemented an incentive based payment system to encourage members to attend
 
